<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:id="@+id/mainlinearlayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
    	android:id="@+id/header1" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/pick_header" 
    	android:gravity="center" android:layout_gravity="center">
    	</TextView>
	<LinearLayout 
	    android:id="@+id/LinearLayout02" 
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent" 
	    android:layout_alignParentBottom="true">
	    <Spinner 
	        android:id="@+id/spinner_class"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:prompt="@string/class_prompt"
	    />
	    <Spinner 
	        android:id="@+id/spinner_event"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:prompt="@string/event_prompt"
	    />
</LinearLayout>
	<TextView 
		android:textAppearance="?android:attr/textAppearanceLarge" 
		android:id="@+id/header2" android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center" 
		android:text="@string/result_header">
	</TextView>
	<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/input_guide" android:gravity="center"></TextView>
	<EditText 
		android:id="@+id/input_result" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:singleLine="True"
		android:autoText="False"
		android:inputType="textNoSuggestions">
		</EditText>
	<TextView 
		android:textSize="30dp"
		android:id="@+id/result_output" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center|bottom" 
		android:text="@string/result_output">
	</TextView>
	<TextView 
		android:textSize="18dp"
		android:id="@+id/result_string_output" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center|bottom" 
		android:text="@string/result_output">
	</TextView>
	<FrameLayout android:id="@+id/frameLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
		<RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
			<Button android:layout_height="wrap_content" android:id="@+id/button1" android:text="Button" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button2" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button1" android:layout_alignLeft="@+id/button1"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button3" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button2" android:layout_alignLeft="@+id/button2"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button4" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button3" android:layout_alignLeft="@+id/button3"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button5" android:text="Button" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_toLeftOf="@+id/button1"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button6" android:text="Button" android:layout_width="wrap_content" android:layout_below="@+id/button3" android:layout_alignRight="@+id/button5"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button7" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button6" android:layout_alignRight="@+id/button6"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button8" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button7" android:layout_alignRight="@+id/button7"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button9" android:text="Button" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/button1"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button11" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button1" android:layout_toRightOf="@+id/button1"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button12" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button11" android:layout_alignLeft="@+id/button11"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button13" android:text="Button" android:layout_width="wrap_content" android:layout_above="@+id/button12" android:layout_alignLeft="@+id/button12"></Button>
		</RelativeLayout>
	</FrameLayout>
	<Button android:layout_height="wrap_content" android:id="@+id/button10" android:layout_marginRight="43dp" android:text="Button" android:layout_width="wrap_content"></Button>
	
</LinearLayout>
